Added conclusion and acknowledgment

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -83,7 +83,7 @@
 \input{parallel_algorithms}
 \input{scaling_results}
 \input{applications}
-% \input{conclusion}
+\input{conclusion}
 
 \bibliographystyle{plain}
 \addcontentsline{toc}{section}{\refname}
