proof-read up to sec. 3.2

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -32,7 +32,6 @@
     citecolor=blue,       		% color of links to bibliography
     filecolor=black,      		% color of file links
     urlcolor=red,       		% color of external links
-    bookmarks=false,
     pdffitwindow=true,
     pdfpagelayout=SinglePage
 }
@@ -68,7 +67,7 @@
 
 \begin{document}
 
-\title{Tree-based Adaptive Level-set Methods on Highly Parallel Machines}
+\title{Parallel Level-set Methods on Adaptive Tree-Based Grids}
 
 \cortext[cor]{Corresponding author: m.mirzadeh@engineering.ucsb.edu}
 \address[MECHE]{Department of Mechanical Engineering, University of California, Santa Barbara, CA 93106-5070, United States.}
