--- a/paper/tex/conclusion.tex
+++ b/paper/tex/conclusion.tex
@@ -1,10 +1,10 @@
 %!TEX root = draft.tex
 \section{Conclusions}
-In this article we have presented parallel algorithms for the advection and reinitialization of the level-set functions on adaptive Quadtree and Octree grids using domain decomposition approach. These algorithms are implemented using a combination of \texttt{MPI} standard and the open-source \texttt{p4est} library. An important feature of the Semi-Lagrangian method is its unconditional stability property which must be preserved in parallel, requiring a parallel interpolation scheme. However, due to the non-uniform distribution of departure points, scalable implementation of such algorithm is not trivial on adaptive Quadtree and Octree grids. An asynchronous interpolation algorithm is presented using non-blocking point-to-point communications which proves good scalability. 
+In this article we have presented parallel algorithms for the advection and reinitialization of the level-set functions on adaptive Quadtree and Octree grids using domain decomposition approach. These algorithms are implemented using a combination of \texttt{MPI} and the open-source \texttt{p4est} library. An important feature of the semi-Lagrangian method is its unconditional stability property which must be preserved in parallel, requiring a parallel interpolation scheme. However, due to the non-uniform distribution of departure points, scalable implementation of such algorithm is not trivial on adaptive Quadtree and Octree grids. An asynchronous interpolation algorithm is presented using non-blocking point-to-point communications which proves good scalability. 
 
-The scalability of the Semi-Lagrangian algorithm, however, depends on the CFL number. Great scalability is observed for intermediate CFL numbers while, e.g. $\text{CFL}~10$. At higher CFL numbers, however, the departure points are potentially further dispersed across processors which limits the scalability. This is due to the fact the domain decomposition technique used here is based on the Z-ordering of quadrants and does not take the velocity field information into account. A possible remedy for this problem could be assigning weights to quadrants based on some estimate of what the grid should look like after one step of the advection algorithm, e.g. by using a forward-in-time integration of grid points. Such an estimate could also reduce the number of Semi-Lagrangian iterations. These ideas are postponed for further investigations. We have also presented a simple parallelization technique for the reinitialization algorithm based on the pseudo-time transient formulation. Both the Semi-Lagrangian and the reinitialization algorithms show great scalability up to 4096 processors. 
+The scalability of the semi-Lagrangian algorithm, however, depends on the CFL number. Great scalability is observed for intermediate CFL numbers while, e.g. $\text{CFL}\sim10$. At higher CFL numbers, however, the departure points are potentially further dispersed across processors which limits the scalability. This is because the domain decomposition technique used here is based on the Z-ordering of cells and does not take the velocity field information into account. A possible remedy for this problem could be assigning weights to cells based on some estimate of what the grid should look like after one step of the advection algorithm, e.g. by using a forward-in-time integration of grid points. Such an estimate could also reduce the number of semi-Lagrangian iterations. These ideas are postponed for further investigations. We have also presented a simple parallelization technique for the reinitialization algorithm based on the pseudo-time transient formulation. Both the semi-Lagrangian and the reinitialization algorithms show good scalability up to 4096 processors. 
 
-Finally, an application of these algorithms is presented in modeling the solidification process by solving the Stefan problem. This application clearly illustrates the applicability of our algorithms to complex multi-scale problems that cannot be treated using the normal domain decomposition techniques on uniform grids. We believe that our findings would be of interest to other researchers using the level-set framework for other complex and multi-scale problems.
+Finally, an application of these algorithms is presented in modeling the solidification process by solving a Stefan problem. This application clearly illustrates the applicability of our algorithms to complex multi-scale problems that cannot be treated using the normal domain decomposition techniques on uniform grids. We believe that our findings would be of interest to other researchers who use the level-set framework for similar complex and multi-scale problems.
 
 \section*{Acknowledgment} 
-The funding for this project was provided by \comment{the funding agency}. We would also like to thank the technical staff at the Texas Advanced Computing Center (TACC) and the developer community of PETSc library for their valuable suggestions.
+The funding for this project was provided by \mohammad{the funding agency}. We would also like to thank the technical staff at the Texas Advanced Computing Center (TACC) and the developer community of PETSc library for their valuable suggestions during this project.
