--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -39,7 +39,8 @@
 % defining some new commands
 \newcommand{\etal}{\textit{et al.\ }}
 \newcommand{\mbf}[1]{\mathbf{#1}}
-\newcommand{\comment}[1]{\textcolor{red}{#1}}
+\newcommand{\comment}[1]{\textcolor{red}{\underline{#1}}}
+\newcommand{\mohammad}[1]{\textcolor{blue}{\underline{Mohammad: #1}}}
 \newcommand{\tensor}[1]{\underline{\underline{\boldsymbol{#1}}}}
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
