--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -66,8 +66,8 @@ Finally, in \texttt{p4est} trees are linearized, i.e. only the leaves are explic
 \label{alg:reconstruction}
 \end{algorithm}
 
-\subsection{Interpolation and semi-Lagrangian method}
-As indicated earlier, we use the Semi-Lagrangian method to solve equation \eqref{eq:ls} when the velocity field is externally generated, i.e. when it does not depend on the level-set function itself. Let us rewrite equation \eqref{eq:ls} along the characteristic curve $\mathbf{X}(t)$ as:
+\subsection{Interpolation and semi-Lagrangian methods}
+As indicated earlier, we use the semi-Lagrangian method to solve equation \eqref{eq:ls} when the velocity field is externally generated, i.e. when it does not depend on the level-set function itself. Let us rewrite equation \eqref{eq:ls} along the characteristic curve $\mathbf{X}(t)$ as:
 \be
 \left\{
 \begin{array}{rcl}
@@ -77,7 +77,7 @@ As indicated earlier, we use the Semi-Lagrangian method to solve equation \eqref
 \right.
 \label{eq:sl}
 \ee
-The Semi-Lagrangian method integrates equations \eqref{eq:sl} backward in time, i.e. starting from the grid $G^{n+1}$ \footnote{$G^{n+1}$ itself is computed in an iterative fashion as explained later on.}, we simply write $\phi^{n+1}(\mathbf{X}^{n+1}) = \phi(\mathbf{X}(t^{n+1}), t^{n+1}) = \phi(\mathbf{X}(t^n), t^n) = \phi^n(\mathbf{X}_d)$. Here the characteristic curves are chosen such that $\mathbf{X}(t^{n+1})$ are simply the coordinates of grids points of $G^{n+1}$, and $\mathbf{X}_d$ are the departure points which are computed using the second-order midpoint method \cite{Min;Gibou:07:A-second-order-accur}:
+The semi-Lagrangian method integrates equations \eqref{eq:sl} backward in time, i.e. starting from the grid $G^{n+1}$ \footnote{$G^{n+1}$ itself is computed in an iterative fashion as explained later on.}, we simply write $\phi^{n+1}(\mathbf{X}^{n+1}) = \phi(\mathbf{X}(t^{n+1}), t^{n+1}) = \phi(\mathbf{X}(t^n), t^n) = \phi^n(\mathbf{X}_d)$. Here the characteristic curves are chosen such that $\mathbf{X}(t^{n+1})$ are simply the coordinates of grids points of $G^{n+1}$, and $\mathbf{X}_d$ are the departure points which are computed using the second-order midpoint method \cite{Min;Gibou:07:A-second-order-accur}:
 \bea
 \mathbf{X}^\star &=& \mathbf{X}^{n+1} - \frac{\Delta t}{2} \mathbf{V}^{n}(\mathbf{X}^n),	   \label{eq:xstar}      \\
 \mathbf{X}_d     &=& \mathbf{X}^{n+1} - \Delta t \mathbf{V}^{n+\frac{1}{2}}(\mathbf{X}^\star), \label{eq:xdeparture}
@@ -87,17 +87,17 @@ where $\mathbf{V}^{n+\frac{1}{2}}$ is obtained via extrapolation from previous t
 \mathbf{V}^{n+\frac{1}{2}} = \frac{3}{2} \mathbf{V}^n - \frac{1}{2}\mathbf{V}^{n-1}. \label{eq:vn_p_half}
 \ee
 
-Note that all values at the intermediate point, $\mathbf{X}^\star$, and departure point, $\mathbf{X}_d$, must be calculated via interpolation from previous the grids $G^{n}$ and $G^{n-1}$. Here we use the stabilized second-order interpolation for $\phi(\mathbf{X}_d)$ and the multi-linear interpolation for $\mathbf{V}^{n+\frac{1}{2}}(\mathbf{X}^\star)$ \cite{Min;Gibou:07:A-second-order-accur}. Although parallelization of the interpolation process on a shared-memory machine is trivial, the same cannot be said for distributed-memory machines. In fact, the parallel interpolation algorithm \ref{alg:interpolation} is probably the most important contribution of this article \comment{but hasn't it been done before ?}. Complication arises because not all calculated departure points will reside in the domain of current process. Moreover, due to the irregular shape of partitions, we cannot be certain that they are entirely owned by neighboring processes. At best we can only expect that their location are bounded by a halo of width $w \le \text{CFL} \: \Delta x_{\min}$ around the local partition. Of course if one enforces $\text{CFL} \le 1$, one can ensure that the halo is bounded by the ghost layer which significantly simplifies the communication problem. This assumption, however, defeats the purpose of using a Semi-Lagrangian approach in the first place since we are interested in large values of $\text{CFL}$ number.
+Note that all values at the intermediate point, $\mathbf{X}^\star$, and departure point, $\mathbf{X}_d$, must be calculated via interpolation from previous the grids $G^{n}$ and $G^{n-1}$. Here we use the stabilized second-order interpolation for $\phi(\mathbf{X}_d)$ and the multi-linear interpolation for $\mathbf{V}^{n+\frac{1}{2}}(\mathbf{X}^\star)$ \cite{Min;Gibou:07:A-second-order-accur}. Although parallelization of the interpolation process on a shared-memory machine is trivial, the same cannot be said for distributed-memory machines. In fact, the parallel interpolation algorithm \ref{alg:interpolation} is probably the most important contribution of this article \comment{but hasn't it been done before ?} \textcolor{blue}{Mohammad: not on adaptive since that's what makes it complicated}. Complication arises because not all departure points will reside in the domain of current process. Moreover, due to the irregular shape of partitions, one cannot even ensure they are entirely owned by neighboring processes. At best we can only expect that their locations are bounded by a halo of width $w \le \text{CFL} \: \Delta x_{\min}$ around the local partition. Of course if one enforces $\text{CFL} \le 1$, one can ensure that the halo is bounded by the ghost layer which significantly simplifies the communication problem. This assumption, however, defeats the purpose of using a semi-Lagrangian approach in the first place since we are interested in large values of $\text{CFL}$ number.
 
-One remedy to this problem, proposed in \cite{Thomas;Cote:95:Massively-parallel-s} for uniform grids, is to increase the size of ghost layer to $\lceil \text{CFL} \rceil$. For large values of the $\text{CFL}$ number, however, this approach can substantially increase the communication volume. Moreover, this simple approach does not work in the process of generating $G^{n+1}$ due to repartitioning. An alternative approach would be to handle local and remote interpolations separately. Our remote interpolation algorithm is composed of three separate phases. In the first phase, which we call buffering, every process searches for all departure points inside the local trees. If the point is owned by a local cell, it is added to a local buffer, otherwise we find the process which owns the point and add the point to a separate buffer belonging to the found rank. Note that searching the point in the local tree is performed recursively \comment{using the hierarchal reconstruction}, similarly to the \texttt{UpdateLocalTree} function in algorithm \ref{alg:reconstruction}. The owner's rank is found by computing the Z-index of the point and then using binary search on the Z-curve. This is already implemented in \texttt{p4est} and explained in details in section 2.5 of \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
+One remedy to this problem, proposed in \cite{Thomas;Cote:95:Massively-parallel-s} for uniform grids, is to increase the size of ghost layer to $\lceil \text{CFL} \rceil$. For large values of the $\text{CFL}$ number, however, this approach can substantially increase the communication volume. Moreover, this simple approach does not work in the process of generating $G^{n+1}$ due to repartitioning. An alternative approach would be to handle local and remote interpolations separately. Our remote interpolation algorithm is composed of three separate phases. In the first phase, which we call buffering, every process searches for all departure points inside the local trees. If the point is owned by a local cell, it is added to a local buffer, otherwise we find the process which owns the point and add the point to a separate buffer belonging to the found rank. Note that searching the point in the local tree is performed recursively using the hierarchal reconstruction (c.f.\ algorithm \ref{alg:reconstruction}). Moreover, the owner's rank is found by computing the Z-index of the point and then using binary search on the Z-curve. This is already implemented in \texttt{p4est} and explained in details in section 2.5 of \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
 
-Once buffering is done, every process knows exactly how many messages it needs to send and to which processes \comment{throughout the whole article, shouldn't we talk of ``processes'' ?}. This also implicitly defines processes that will later on send a reply message to this process. However, at this point no one knows which processes they should expect a message from. We solve this problem using a simple \textit{communication matrix} (see figure \ref{fig:communication}). Other approaches for solving this problem could include using non-blocking collective or one-sided communication operations introduced in the MPI-3 standard \cite{MPI_ref, sparse dynamic exchange protocol paper}. Although these algorithms have better theoretical communication complexities, we did not see any difference in the runtime or scalability of algorithm \ref{alg:interpolation} when using them. 
+Once buffering is done, every process knows exactly how many messages it needs to send and to which processes. This also implicitly defines processes that will later on send a reply message to this process. However, at this point no process knows which processes to expect a message from. We solve this problem using a simple \textit{communication matrix} (see figure \ref{fig:communication}). Other approaches for solving this problem could include using non-blocking collective or one-sided communication operations introduced in the MPI-3 standard \cite{Hoefler;Siebert;Lumsdaine:10:Scalable-communication}. Although these algorithms have better theoretical communication complexities, we did not see any difference in the runtime or scalability of algorithm \ref{alg:interpolation} when using them. 
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width = \textwidth] {figures/communication.pdf}
 \end{center}
-\caption{Left: Location of back-traced points depends on the magnitude of the local velocity and on the time-step. Although the distance to the departure point is bounded by $\text{CFL} \: \Delta x_{\min}$, one cannot make any special assumption about receiving rank without explicitly searching the entire Z-curve. Moreover, the receiving process has no prior knowledge about which processes to check for incoming messages nor does it know anything about the possible message length (i.e. number of points). Middle: A directed graph illustrating the communication pattern among processes with arrows representing the direction in which messages are sent. Right: The adjacency matrix of the communication graph. For each row, the sum of all columns represents the number of messages sent. Conversely, for each column, the sum of all rows represents the number of messages that need to be received. As detailed in algorithm \ref{alg:interpolation} this information is enough to build a parallel interpolation scheme.}
+\caption{Left: Location of back-traced points depends on the magnitude of the local velocity and on the time-step. Although the distance to the departure point is bounded by $\text{CFL} \: \Delta x_{\min}$, one cannot make any assumption about receiving rank without explicitly searching the entire Z-curve. Moreover, the receiving process has no prior knowledge about which processes to check for incoming messages nor does it know anything about the possible message length (i.e. number of points). Middle: A directed graph illustrating the communication pattern among processes with arrows representing the direction in which messages are sent. Right: The adjacency matrix of the communication graph. For each row, the sum of all columns represents the number of messages that need to be sent. Conversely, for each column, the sum of all rows represents the number of messages that need to be received. As detailed in algorithm \ref{alg:interpolation} this information is enough to build a parallel interpolation scheme.}
 \label{fig:communication}
 \end{figure}
 
@@ -115,7 +115,7 @@ Note that this matrix is also distributed among processes, i.e. each row is owne
 \ben
 S_i = \sum_j a_{ij} \hspace{5 mm} \text {and} \hspace{5 mm} R_i = \sum_j a_{ji}
 \een
-where $S_i$ and $R_i$ denote the number of sent and received messages respectively. While $S_i$ can be computed trivially, a reduction operation is required to compute $R_i$. For instance, this can be achieved using a single \texttt{MPI\_Reduce\_scatter} function call. The last phase of the interpolation procedure involves overlapping the computation of interpolated values for local points with the communication of data between processes. This is done by alternating between local calculations and probing for incoming messages from other processes. The interpolation is finished once the values for all local the points have been calculated and all the remote requests have been processed (see algorithm \ref{alg:interpolation}).
+where $S_i$ and $R_i$ denote the number of sent and received messages, respectively. While $S_i$ can be computed trivially, a reduction operation is required to compute $R_i$. For instance, this can be achieved using a single \texttt{MPI\_Reduce\_scatter} function call. The last phase of the interpolation procedure involves overlapping the computation of interpolated values for local points with the communication of data between processes. This is done by alternating between local calculations and probing for incoming messages from other processes. The interpolation is finished once the values for all local the points have been calculated and all the remote requests have been processed (see algorithm \ref{alg:interpolation}).
 \begin{algorithm}[htbp]
 \caption{$values \gets \texttt{Interpolate (}H, \mathbf{X}\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
@@ -130,7 +130,7 @@ where $S_i$ and $R_i$ denote the number of sent and received messages respective
 	\EndIf
 \EndFor
 \For {$r: mpisize$} \Comment{Phase II -- initiate communication and compute number of messages}
-	\If {$col[r]$ \textcolor{blue}{col[mpirank] is always zero ...}}
+	\If {$col[r]$}
 		\State $\texttt{MP\_Isend(}r, buff[r]\texttt{)}$
 	\EndIf
 \EndFor
@@ -165,7 +165,7 @@ where $S_i$ and $R_i$ denote the number of sent and received messages respective
 \label{alg:interpolation}
 \end{algorithm}
 
-Using the interpolation algorithm \ref{alg:interpolation}, we close this section by presenting the final Semi-Lagrangian algorithm \ref{alg:semi-lagrangian}. The basic idea here is to start from an initial guess $G^{n+1}_0$ and modify the grid using the refinement \eqref{eq:refine} and coarsening \eqref{eq:coarsen} criteria until convergence is obtained. Various options are available for $G^{n+1}_0$. For instance it is possible to start from the macromesh and only perform refinement steps until convergence. This choice, however, is not suitable since the first few iterations do not contain many cells and there is little work for parallelism. Here we simply take the previous grid as the starting point, i.e. $G^{n+1}_0 = G^n$. Note that this iterative process is essentially unavoidable since the grid is based on the values of the level-set function at $t^{n+1}$, which itself is unknown and is to be defined on $G^{n+1}$. Nonetheless the process converges to the final grid in at most $l_{\max}$ steps \comment{shouldn't it be $l_{max}-l_{min}$ ?} where $l_{\max}$ denotes the maximum final depth of the trees across all processes.
+Using the interpolation algorithm \ref{alg:interpolation}, we close this section by presenting the final semi-Lagrangian algorithm \ref{alg:semi-lagrangian}. The basic idea here is to start from an initial guess $G^{n+1}_0$ and modify the grid using the refinement \eqref{eq:refine} and coarsening \eqref{eq:coarsen} criteria until convergence is obtained. Various options are available for $G^{n+1}_0$. For instance it is possible to start from the macromesh and only perform refinement steps until convergence. This choice, however, is not suitable since the first few iterations do not contain many cells and there is little work for parallelism. Here we simply take the previous grid as the starting point, i.e. $G^{n+1}_0 = G^n$. Note that this iterative process is essentially unavoidable since the grid is based on the values of the level-set function at $t^{n+1}$, which itself is unknown and is to be defined on $G^{n+1}$. Nonetheless the process converges to the final grid in at most $l_{\max}-l_{\min}$ steps where $l_{\min}$ and $l_{\max}$ denote the maximum and minimum depth of all trees in the forest, receptively.
 \begin{algorithm}[htbp]
 \caption{$[G^{n+1}, \phi^{n+1}] \gets \texttt{SemiLagrangian (}G^n, \phi^n, \mathbf{V}^n, \mathbf{V}^{n-1}, \text{CFL}\texttt{)}$} %\label{euclid}
 \begin{algorithmic}[1]
@@ -191,7 +191,7 @@ Using the interpolation algorithm \ref{alg:interpolation}, we close this section
 \end{algorithm}
 
 \subsection{Reinitialization}
-Successive application of algorithm \ref{alg:semi-lagrangian}, especially for large values of the CFL number, can potentially degrades the signed distance property of the level-set function. It is thus important to reinitialize the level-set function every few iterations, especially because the quality of grid generated depends heavily on the signed distance property. To achieve this property we solve the pseudo-time transient equation \eqref{eq:reinitialization} using the discretization scheme detailed in \cite{Min;Gibou:07:A-second-order-accur}. For completeness, we briefly review the scheme. First, we write equation \eqref{eq:reinitialization} in the following semi-discrete form:
+Successive application of algorithm \ref{alg:semi-lagrangian}, especially for large values of the CFL number, eventually degrades the signed distance property of the level-set function. Thus, it is important to reinitialize the level-set function every few iterations, especially because the quality of generated grid heavily depends on the signed distance property. To achieve this property we solve the pseudo-time transient equation \eqref{eq:reinitialization} using the discretization scheme detailed in \cite{Min;Gibou:07:A-second-order-accur}. For completeness, we briefly review the scheme. First, we write equation \eqref{eq:reinitialization} in the following semi-discrete form:
 \be
 \frac{\text{d} \phi}{\text{d} \tau} + S(\phi_0) \left(\mathcal{H}_G(D^+_i \phi, D^-_i \phi) - 1 \right) = 0,
 \label{eq:semidiscrete_reinit}
@@ -208,7 +208,7 @@ where $D^+_i \phi$ and $D^-_i \phi$ are the forward and backward derivatives in 
 \right.
 ,
 \een
-where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A-second-order-accur}, equation \eqref{eq:semidiscrete_reinit} is integrated in time using the TVD-RK2 scheme and with adaptive time-stepping in order to accelerate the convergence to the steady state. Since all the computation is based on a local stencil, the parallel implementation of this scheme is mostly trivial. However, one minor point requires further explanation. As suggested in \cite{Min;Gibou:07:A-second-order-accur}, one-sided derivatives $D^+_i \phi$ and $D^-_i \phi$ are computed using second order discretizations which require to compute the second derivatives. To enable overlap between computation and communications when computing second order derivatives and also integrating \eqref{eq:semidiscrete_reinit}, we use the following common technique. First, we label all local points, $L_p$, as either private, $P_p$, or boundary, $B_p$. Here, the boundary points are the collection of all local points that are regarded as a ghost point, $G_r$, on at least one other process, i.e. $B_p = \underset{r,\;r\neq p}{\bigcup} G_r$. Private points are defined as the collection of all local points that are not a boundary point, i.e. $P_p = L_p \setminus B_p$. Algorithm \ref{alg:overlap} illustrates how this labelling can help with overlapping the computation and the communication associated to an arbitrary local operation $\phi^{n+1} \gets \mathcal{F}(\phi^n)$. Note that \texttt{p4est} library already includes all the primitives required for labelling local points without any further communication.
+where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A-second-order-accur}, equation \eqref{eq:semidiscrete_reinit} is integrated in time using the TVD-RK2 scheme and with adaptive time-stepping in order to accelerate the convergence to the steady state. Since the computation is based on a local stencil, the parallel implementation of this scheme is mostly trivial. However, one minor point requires further explanation. As suggested in \cite{Min;Gibou:07:A-second-order-accur}, one-sided derivatives $D^+_i \phi$ and $D^-_i \phi$ are computed using second order discretization which require to compute the second derivatives. To enable overlap between computation and communications when computing second order derivatives and also integrating \eqref{eq:semidiscrete_reinit}, we use the following common technique. First, we label all local points, $L_p$, as either private, $P_p$, or boundary, $B_p$. Here, the boundary points are the collection of all local points that are regarded as a ghost point, $G_r$, on at least one other process, i.e. $B_p = \underset{r,\;r\neq p}{\bigcup} G_r$. Private points are defined as the collection of all local points that are not a boundary point, i.e. $P_p = L_p \setminus B_p$. Algorithm \ref{alg:overlap} illustrates how this labeling can help with overlapping the computation and the communication associated to an arbitrary local operation $\phi^{n+1} \gets \mathcal{F}(\phi^n)$. Note that \texttt{p4est} library already includes all the primitives required for labeling local points without any further communication.
 
 \begin{algorithm}[htbp]
 \caption{$\phi^{n+1} \gets \texttt{Overlap (}\phi^n, \mathcal{F}\texttt{)}$} %\label{euclid}
