--- a/paper/tex/scaling_results.tex
+++ b/paper/tex/scaling_results.tex
@@ -1,12 +1,11 @@
 %!TEX root = draft.tex
-\section{Scaling} \label{sec:scaling}
-In this section we present some results that demonstrate the scalability of our algorithms. All of our tests were ran on the Stampede cluster at Texas Advanced Computing Center (TACC) where we are limited to $4096$ cores at most. Each node of Stampede has 2 eight-core Xenon E5-2680 processors clocked at 2.7 GHz with 32 GB of DDR3-1600 MHz memory and interconnected using an InfiniBand network card. Unless mentioned otherwise, in all the tests we have used all 16 cores of every node. Finally, in all cases we report the maximum wall time recorded using PETSc's logging interface which has a temporal resolution of roughly $0.1 \: \mu s$.
+\section{Scaling results} \label{sec:scaling}
+In this section we present some results that demonstrate the scalability of our algorithms. All of our tests were ran on the Stampede cluster at Texas Advanced Computing Center (TACC) where we are limited to $4096$ cores at most. Each node of Stampede has 2 eight-core Xenon E5-2680 processes clocked at 2.7 GHz with 32 GB of DDR3-1600 MHz memory and interconnected using an InfiniBand network card. Unless mentioned otherwise, in all the tests we have used all 16 cores of every node. Finally, in all cases we report the maximum wall time recorded using PETSc's logging interface which has a temporal resolution of roughly $0.1 \: \mu s$.
 
 \subsection{Interpolation}
-In this section we show the results for a simple test to measure the scalability of the interpolation algorithm \ref{alg:interpolation}. The test consists in interpolating a function at a number of random points on a randomly refined Octree in three spatial dimensions. We consider two cases, a small test on a level 9 tree with roughly 20M cells and 33M nodes and larger test on a level 13 tree with roughly 128M cells and 280M nodes. In both cases the number of randomly generated points is chosen to be equal to the number of nodes and the stablized second-order interpolation of \cite{Min;Gibou:07:A-second-order-accur} is performed 10 times to smooth out possible timing fluctuations.
+In this section we show the results for a simple test to measure the scalability of the interpolation algorithm \ref{alg:interpolation}. The test consists of interpolating a function at a number of random points on a randomly refined Octree in three spatial dimensions. We consider two cases, a small test on a level 9 tree with roughly 33M nodes and larger test on a level 13 tree with roughly 280M nodes. In both cases the number of randomly generated points is chosen to be equal to the number of nodes and the stabilized second-order interpolation of \cite{Min;Gibou:07:A-second-order-accur} is performed 10 times to smooth out possible timing fluctuations.
 
-To simulate the effect of different CFL numbers, we generate the random points such that on each processor $\alpha\%$ of them are located outside the processor boundary and will thus initiate communication. Scaling results are presented for $\alpha = 5 \%$ and $\alpha = 95\%$ for both the small and large problems in figure \ref{fig:interpolation}. Excellent scaling is obtained for the small problem for $P = 16-512$ even when $95\%$ of the interpolation points belong to a remote processor. For the larger problem, the communication overhead prevents the algorithm from scaling beyond $4096$ processors when $\alpha = 95\%$. Note that for $\alpha = 5\%$, even though some sections of the algorithm stop scaling, the overall algorithm still scales since the local work dominates the timing. This illustrates the effectiveness of the non-blocking communication pattern of algorithm \ref{alg:interpolation}.
-
+To simulate the effect of different CFL numbers, we generate the random points such that on each process $\alpha$ percentage of them are located outside the process boundary and thus will initiate communication. Scaling results are presented for $\alpha = 5 \%$ and $\alpha = 95\%$ for both the small and large problems in figure \ref{fig:interpolation}. Excellent scaling is obtained for the small problem for $P = 16-512$ even when $95\%$ of the interpolation points belong to a remote process. For the larger problem, however, the communication overhead prevents the algorithm from scaling beyond $4096$ processes when $\alpha = 95\%$. 
 \begin{figure}[htbp]
 	\begin{center}
 		\subfigure[$N_G = 33$M, $\alpha = 5\%$]{\includegraphics[width = 0.45 \textwidth] {figures/interpolation_small_05.pdf}}
@@ -15,18 +14,18 @@ To simulate the effect of different CFL numbers, we generate the random points s
 		\subfigure[$N_G = 280$M, $\alpha = 5\%$]{\includegraphics[width = 0.45 \textwidth] {figures/interpolation_large_05.pdf}}
 		\subfigure[$N_G = 280$M, $\alpha = 95\%$]{\includegraphics[width = 0.45 \textwidth] {figures/interpolation_large_95.pdf}}
 	\end{center}
-	\caption{Strong scaling of algorithm \ref{alg:interpolation} for several tests where $N_G$ denotes the number of random interpolation points (which is the same as the number of nodes in the Octree) and $\alpha$ denotes the percentage of these points that are remote for each processor. Here ``Total'' represents the total time spent in the interpolation while ``buffer'', ``local'', ``queries'', and ``replies'' represent the the timing for different sections (c.f. algorithm \ref{alg:interpolation}). The results indicate excellent scaling for the small test (a-b) and for the large test when $\alpha = 5\%$ (c). For the extreme case (d) the algorithm stops scaling at $4096$ processors due to communication overhead.}
+	\caption{Strong scaling of algorithm \ref{alg:interpolation} for several tests where $N_G$ denotes the number of random interpolation points (which is the same as the number of nodes in the Octree) and $\alpha$ denotes the percentage of these points that are remote for each process. Here ``Total'' represents the total time spent in the interpolation while ``buffer'', ``local'', ``queries'', and ``replies'' represent the the timing for different sections (c.f. algorithm \ref{alg:interpolation}). The results indicate excellent scaling for the small test (a-b) and for the large test when $\alpha = 5\%$ (c). For the extreme case (d) the algorithm stops scaling at $4096$ processes due to communication overhead.}
 	\label{fig:interpolation}
 \end{figure}
 
 \subsection{Semi-Lagrangian}
-To test the scalability of the Semi-Lagrangian algorithm \ref{alg:semi-lagrangian} we consider a slightly modified version of the Enright's rotation test \cite{Enright;Fedkiw;Ferziger;etal:02:A-Hybrid-Particle-Le}, i.e. we advect a sphere of radius 0.35 located at $(0.4, 0.4, 0.4)$ with a divergence free velocity field given by:
+To test the scalability of the semi-Lagrangian algorithm \ref{alg:semi-lagrangian}, we consider a slightly modified version of the Enright's rotation test \cite{Enright;Fedkiw;Ferziger;etal:02:A-Hybrid-Particle-Le}, i.e. we advect a sphere of radius 0.35 located at $(0.4, 0.4, 0.4)$ with a divergence free velocity field given by:
 \bean
 u(x,y,z) &=& 2\sin(\pi x)^2 \sin(2\pi y) \sin(2 \pi z), \\
 v(x,y,z) &=& -\sin(\pi y)^2 \sin(2\pi x) \sin(2 \pi z),\\
 w(x,y,z) &=& -\sin(\pi z)^2 \sin(2\pi x) \sin(2 \pi y). 
 \eean
-To understand the effect of the CFL number on the scalability of the algorithm we perform one step of the Semi-Lagrangian algorithm for $\text{CFL} = 1$, $\text{CFL} = 10$, and $\text{CFL} = 100$. We also perform the test for two different initial girds, a small grid with maximum level $l_\text{max} = 10$ and a large grid with maximum level $l_\text{max} = 12$. After one advection step, these grids have approximately 15M and 255M nodes, respectively. 
+To understand the effect of the CFL number on the scalability of the algorithm we perform one step of the semi-Lagrangian algorithm for $\text{CFL} = 1$, $\text{CFL} = 10$, and $\text{CFL} = 100$. We also perform the test for two different initial girds, a small grid with maximum level $l_\text{max} = 10$ and a large grid with maximum level $l_\text{max} = 12$. After one advection step, these grids have approximately 15M and 255M nodes, respectively. 
 \begin{table}[htbp]
 	\begin{minipage}{.5\linewidth}
 		\begin{center}
@@ -56,42 +55,42 @@ To understand the effect of the CFL number on the scalability of the algorithm w
 		\caption*{(b) $l_\text{max} = 12$}
 		\end{center}
 	\end{minipage}	
-	\caption{Number of iterations required for the grid construction in algorithm \ref{alg:semi-lagrangian} for the rotation test on a (a) level-10 and (b) level-12 Octree with approximately 15M and 255M nodes, respectively. Note how the iteration count increases with the CFL number but is almost independent of the number of processors. The slight dependence between the number of iterations and the number of processors is most likely due to the dependence of round-off errors on the number of processors. Nonetheless, close examination of the Octrees generated (data not shown) reveals that they are identical and independent of the number of processors used to perform the test.}
+	\caption{Number of iterations required for the grid construction in algorithm \ref{alg:semi-lagrangian} for the rotation test on a (a) level-10 and (b) level-12 Octree with approximately 15M and 255M nodes, respectively. Note how the iteration count increases with the CFL number but is almost independent of the number of processes. The slight dependence between the number of iterations and the number of processes is most likely due to the dependence of round-off errors on the number of processes. Nonetheless, close examination of the Octrees generated (data not shown) reveals that they are identical and independent of the number of processes used to perform the test.}
 	\label{tab:semilagrangian}
 \end{table}
 
-Table \ref{tab:semilagrangian} illustrates the dependence of the number of iterations required to build the grid on the CFL number; as the CFL is increased, the interface travels a farther distance which necessitates more iterations to generate the grid. Note that the apparent dependence on the number of processors is most likely due to round-off errors during the interpolation and/or backtracking steps. Figures \ref{fig:semilagrangian_small} and \ref{fig:semilagrangian_large} illustrate the scalability of the algorithm for the small and large problems, respectively. To enable meaningful comparisons between different CFL numbers and number of processors, the maximum time has been scaled by the number of iterations required for the grid construction as reported in table \ref{tab:semilagrangian}. For both problems, excellent scalability is observed for $\text{CFL} = 1$ and $\text{CFL} = 10$. The algorithm even shows good scalability when taken to the extreme, i.e. for $\text{CFL} = 100$.
+Table \ref{tab:semilagrangian} illustrates the dependence of the number of iterations required to build the grid on the CFL number; as the CFL is increased, the interface travels a farther distance which necessitates more iterations to generate the grid. Note that the apparent dependence on the number of processes is most likely due to round-off errors during the interpolation and/or backtracking steps. Figures \ref{fig:semilagrangian_small} and \ref{fig:semilagrangian_large} illustrate the scalability of the algorithm for the small and large problems, respectively. To enable meaningful comparisons between different CFL numbers and number of processes, the maximum time has been scaled by the number of iterations required for the grid construction as reported in table \ref{tab:semilagrangian}. For both problems, excellent scalability is observed for $\text{CFL} = 1$ and $\text{CFL} = 10$. The algorithm even shows good scalability when taken to the extreme, i.e. for $\text{CFL} = 100$.
 
-An increase in the CFL number has two effects on the algorithm. First, a larger fraction of the departure points lands in the domains of remote processors. Moreover, these points are potentially dispersed across a larger number of processors. This means that both the number of MPI messages and their volume increase as the CFL number increases. Second, as more points are shipped to remote processors for interpolation, there is a greater chance that the interpolation load is imbalanced across processors. This is especially true for regions of space in which the streamlines cluster. Both factors contribute to decrease the scalability of the algorithm at large CFL numbers. 
+An increase in the CFL number has two effects on the algorithm. First, a larger fraction of the departure points lands in the domains of remote processes. Moreover, these points are potentially dispersed across a larger number of processes. This means that the communication volume should increase with the CFL number. Second, as more points are shipped to remote processes for interpolation, there is a greater chance that the interpolation load is imbalanced across processes. This is especially true for regions of space in which the streamlines cluster. Both factors can contribute to reduce the scalability of the algorithm at large CFL numbers. 
 \begin{figure}[htbp]
 	\begin{center}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_1_SemiLagrangian.pdf}}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_10_SemiLagrangian.pdf}}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_100_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_1_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_10_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_100_SemiLagrangian.pdf}}
 		\\
 		\subfigure[Interpolation, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_1_Interpolation.pdf}}
 		\subfigure[Interpolation, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_10_Interpolation.pdf}}
 		\subfigure[Interpolation, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Small_100_Interpolation.pdf}}
 	\end{center}
-	\caption{Strong scaling of a single iteration of algorithm \ref{alg:semi-lagrangian} for the rotation test on a level-10 Octree with approximately 13M cells and 15M nodes. Top row: scaling of the various components of the algorithm for (a) $\text{CFL} = 1$, (b) $\text{CFL} = 10$, and (c) $\text{CFL} = 100$. Bottom row: breakdown of the various components of the interpolation phase for the same CFL numbers. Note that the maximum time has been scaled by the number of iterations required to build the tree (c.f. table \ref{tab:semilagrangian}).}
+	\caption{Strong scaling of a single iteration of algorithm \ref{alg:semi-lagrangian} for the rotation test on a level-10 Octree with approximately 15M nodes. Top row: scaling of the various components of the algorithm for (a) $\text{CFL} = 1$, (b) $\text{CFL} = 10$, and (c) $\text{CFL} = 100$. Bottom row: breakdown of the various components of the interpolation phase for the same CFL numbers. Note that the maximum time has been scaled by the number of iterations required to build the tree (c.f. table \ref{tab:semilagrangian}).}
 	\label{fig:semilagrangian_small}
 \end{figure}
 
 \begin{figure}[htbp]
 	\begin{center}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_1_SemiLagrangian.pdf}}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_10_SemiLagrangian.pdf}}
-		\subfigure[Semi-Lagrangian, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_100_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_1_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_10_SemiLagrangian.pdf}}
+		\subfigure[semi-Lagrangian, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_100_SemiLagrangian.pdf}}
 		\\
 		\subfigure[Interpolation, $\text{CFL} = 1$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_1_Interpolation.pdf}}
 		\subfigure[Interpolation, $\text{CFL} = 10$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_10_Interpolation.pdf}}
 		\subfigure[Interpolation, $\text{CFL} = 100$]{\includegraphics[width = 0.3 \textwidth] {figures/SL_Large_100_Interpolation.pdf}}
 	\end{center}
-	\caption{Strong scaling of a single iteration of algorithm \ref{alg:semi-lagrangian} for the rotation test on a level-12 Octree with approximately 251M cells and 255M nodes. Top row: scaling of the various components of the algorithm for (a) $\text{CFL} = 1$, (b) $\text{CFL} = 10$, and (c) $\text{CFL} = 100$. Bottom row: breakdown of the various components of the interpolation phase for the same CFL numbers. Note that the maximum time has been scaled by the number of iterations required to build the tree (c.f. table \ref{tab:semilagrangian}).}
+	\caption{Strong scaling of a single iteration of algorithm \ref{alg:semi-lagrangian} for the rotation test on a level-12 Octree with approximately 255M nodes. Top row: scaling of the various components of the algorithm for (a) $\text{CFL} = 1$, (b) $\text{CFL} = 10$, and (c) $\text{CFL} = 100$. Bottom row: breakdown of the various components of the interpolation phase for the same CFL numbers. Note that the maximum time has been scaled by the number of iterations required to build the tree (c.f. table \ref{tab:semilagrangian}).}
 	\label{fig:semilagrangian_large}
 \end{figure}
 
-To better understand the importance of the CFL number on the scalability, we have recorded a complete history of the communication pattern in the interpolation step. Figure \ref{fig:communication_4096} illustrates the effects of the CFL number on three different metrics, namely the number of interpolation points\footnote{Note that this includes both the local points and the points queried by other processors}, $N_p$, the number of sent and received messages, $N_m = S + R$, and the total communication volume, $V_m$ in mega bytes (MB), for $p=4096$ processors. Furthermore, these values are reported for the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm. There are several points to make. First, increasing the CFL number greatly increases the load imbalance, as shown by the spread of the data in figure \ref{fig:communication_4096_pf}. This is because at higher CFL numbers, and with the velocity field prescribed, it is more likely that some processors will receive a larger portion of the backtracked points. Second, increasing the CFL number increases both the communication volume and its spread across processors (c.f. figure \ref{fig:communication_4096_vf}). Interestingly, however, the number of messages sent and received seems to be unaffected by the CFL number. The bottom row of figure \ref{fig:communication_4096} exhibits a better balance both in the computation and communication volume in the last iteration of the Semi-Lagrangian algorithm. This can be explained by noting that as the algorithm converges to the final grid, partitioning of the grid essentially becomes equivalent to partitioning of the backtracked points \comment{awkward ... maybe: the partitioning of the the grids $G^n$ and $G^{n+1}$ become very similar ?}. Detailed information about the load balancing and the communication patterns is listed in table \ref{tab:communication}.
+To better understand the importance of the CFL number on the scalability, we have recorded a complete history of the communication pattern in the interpolation step. Figure \ref{fig:communication_4096} illustrates the effects of the CFL number on different metrics, namely the number of interpolation points\footnote{Note that this includes both the local points and the points queried by other processes}, $N_p$, the number of sent and received messages, $N_m = S + R$, and the total communication volume, $V_m$ in megabytes (MB), for $p=4096$ processes. Furthermore, these values are reported for the first (top row) and last (bottom row) iterations of the semi-Lagrangian algorithm. There are several points to make. First, increasing the CFL number greatly increases the load imbalance, as shown by the spread of the data in figure \ref{fig:communication_4096_pf}. This is because at higher CFL numbers, it is more likely that some processes will receive a larger portion of the backtracked points. Second, increasing the CFL number increases both the communication volume and its spread across processes (c.f. figure \ref{fig:communication_4096_vf}). Interestingly, however, the number of sent and received messages do not seem to affected by the CFL number. The bottom row of figure \ref{fig:communication_4096} exhibits a better balance both in the computation and communication volume in the last iteration of the semi-Lagrangian algorithm. This can be explained by noting that for the final iteration, partitioning of $G^{n+1}$ is a good approximation of partitioning of departure points on $G^n$. \comment{awkward ... maybe: the partitioning of the grids $G^n$ and $G^{n+1}$ become very similar ?} \mohammad{not quite ... I am not sure what would be the best to phrase it but what i want to say is load balancing really requires you to partition the departure points on $G^n$ and not the $G^{n+1}$ which, of course, you cannot since you do not have that information ... the situation becomes better at the final iteration because both partitions are proportional to (Surface area of interface)/(Number of processors) ...} . Detailed information about the load balancing and the communication patterns is listed in table \ref{tab:communication}.
 \begin{figure}[htbp]
 	\begin{center}
 		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/point_first_4096.pdf}  \label{fig:communication_4096_pf}}
@@ -102,7 +101,7 @@ To better understand the importance of the CFL number on the scalability, we hav
 		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/message_last_4096.pdf} \label{fig:communication_4096_ml}}
 		\subfigure[]{\includegraphics[width = 0.3 \textwidth] {figures/volume_last_4096.pdf}  \label{fig:communication_4096_vl}}		
 	\end{center}
-	\caption{Performance indicators of the first (top row) and last (bottom row) iterations of the Semi-Lagrangian algorithm for the advection on 4096 processors with $\text{CFL} = 1$ (\drawdiamond{black} \comment{this does not work on my computer, I see a W}), $\text{CFL} = 10$ (\drawsquare{red}), and $\text{CFL} = 100$ (\drawcircle{blue}). Increasing the CFL number greatly causes load imbalance during interpolation (a) and increases the communication volume (c). However, the CFL number does not seem to appreciably affect the number of messages sent by the processors (b). During the last Semi-Lagrangian iteration, the initial grid $G_0$ (c.f. algorithm \ref{alg:semi-lagrangian}) is very close to the final grid. As a result, the load imbalance is considerably improved (d). Curiously, however, the communication pattern does not seem to be change much between first and last iterations (e-f) \comment{e-f ?}.}
+	\caption{Performance indicators of the first (top row) and last (bottom row) iterations of the semi-Lagrangian algorithm for the advection on 4096 processes with $\text{CFL} = 1$ (\drawdiamond{black} \comment{this does not work on my computer, I see a W} \mohammad{hum ... not sure what to do for this one. it should be part of latex...}), $\text{CFL} = 10$ (\drawsquare{red}), and $\text{CFL} = 100$ (\drawcircle{blue}). Increasing the CFL number greatly causes load imbalance during interpolation (a) and increases the communication volume (c). However, the CFL number does not seem to appreciably affect the number of messages sent by the processes (b). During the last semi-Lagrangian iteration, the initial grid $G_0$ (c.f. algorithm \ref{alg:semi-lagrangian}) is very close to the final grid. As a result, the load imbalance is considerably improved (d). Curiously, however, the communication pattern does not seem to be change much between first and last iterations (e-f) \comment{e-f ?} \mohammad{e and f figures. Should we rephrase?}.}
 	\label{fig:communication_4096}
 \end{figure}
 
@@ -132,7 +131,7 @@ To better understand the importance of the CFL number on the scalability, we hav
 	\hline
 	\end{tabular}
 	}
-	\caption{Detailed load balancing and communication information for the advection test problem for $\text{CFL} = 1$, $\text{CFL} = 10$, and $\text{CFL} = 100$. Note how increasing the CFL number causes load imbalance and increases the communication volume while it does not affect the number of messages sent and received during an iteration of the Semi-Lagrangian step.}
+	\caption{Detailed load balancing and communication information for the advection test for $\text{CFL} = 1$, $\text{CFL} = 10$, and $\text{CFL} = 100$. Note how increasing the CFL number causes load imbalance and increases the communication volume while it does not affect the number of messages sent and received during an iteration of the semi-Lagrangian step.}
 	\label{tab:communication}
 \end{table}
 
