--- a/paper/tex/abstract.tex
+++ b/paper/tex/abstract.tex
@@ -1,6 +1,6 @@
 %!TEX root = draft.tex
 \begin{abstract}
-In this article we present scalable parallel algorithms for the advection and reinitialization of level-set functions on adaptive Quadtree and Octree grids. Our algorithms are based on domain decomposition technique and implemented using \texttt{MPI} and the open-source \texttt{p4est} library. An important contribution of the paper is a parallel semi-Lagrangian method which, similar to its serial implementation, is free of any time-step restrictions. This is achieved by introducing a scalable global interpolation scheme on adaptive Quadtree and Octree grids. Moreover, we present a simple parallel reinitialization scheme using the pseudo-time transient formulation. Both parallel algorithms scale nicely on the Stampede supercomputer where we are limited to 4096 cores at most. Finally a relevant application of the algorithms is presented in modeling the crystallization phenomena by solving a Stefan problem, illustrating a level of detailed calculation that would be impossible on uniform grids. We believe that the algorithms presented in this article will be of interest and useful to researchers working with the level-set framework and modeling multi-scale physics in general.
+In this article we present scalable parallel algorithms for the advection and reinitialization of level-set functions on adaptive Quadtree and Octree grids. Our algorithms are based on a domain decomposition technique and implemented using \texttt{MPI} and the open-source \texttt{p4est} library. An important contribution of the paper is a parallel semi-Lagrangian method which, similar to its serial implementation, is free of any time-step restrictions. This is achieved by introducing a scalable global interpolation scheme on adaptive Quadtree and Octree grids. Moreover, we present a simple parallel reinitialization scheme using the pseudo-time transient formulation. Both parallel algorithms scale nicely on the Stampede supercomputer where we are limited to 4096 cores at most. Finally a relevant application of the algorithms is presented in modeling the crystallization phenomena by solving a Stefan problem, illustrating a level of detailed calculation that would be impossible on uniform grids. We believe that the algorithms presented in this article will be of interest and useful to researchers working with the level-set framework and modeling multi-scale physics in general.
 \end{abstract}
 \begin{keyword}
 Quadtree/Octree Grids \sep Parallel Computing \sep Space Filling Curves \sep Semi-Lagrangian Method \sep Level-set Method
